50 output based interview questions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="/javascript/Array/OutputBased Questions/BasicOutputQuestions.js"></script>
+    <script src="/javascript/OutputBasedInterviewQue.js"></script>
 </body>
 
 </html>
