js practice questions started

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <script src="/InterviewFaced/Interview.js"></script>
+    check developer's console :)
+
+    <script src="/javascript/w3ResourceQueAns/JsBasic.js"></script>
 </body>
 
 </html>
