--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     check developer's console :)
 
-    <script src="/javascript/w3ResourceQueAns/JsBasic.js"></script>
-</body>
+    <!-- <input type="number" id="textBox" />
+    <button onclick="GuessNum()">Guess</button> -->
 
+    <script src="/javascript/w3ResourceQueAns/JsBasic.js"></script>
+  </body>
 </html>
