--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- <input type="number" id="textBox" />
     <button onclick="GuessNum()">Guess</button> -->
+    <input type="text" id="inputField" />
 
     <script src="/javascript/w3ResourceQueAns/Functions.js"></script>
   </body>
